Fixed right button temorarily, and removed scrollbar below featureCarousel.

--- a/MusicPlayerWebApp/wwwroot/css/site.css
+++ b/MusicPlayerWebApp/wwwroot/css/site.css
@@ -24,6 +24,7 @@ body {
 #featureCarousel {
     overflow-x: auto;
     white-space: nowrap;
+    scrollbar-width: none;
 }
 
 .card {
